# python_labs

./: .coverage  README.md  output.json  run_lab08.py  test_lab9.py
data/: check2.csv  input.txt  report.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
src/: 02_sum_avg.py  pyproject.toml  task1.py
src/lab01/: task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  tasknomer11.py
src/lab02/: task1.py  task2.py  task3.py
src/lab03/: task1.py  task2.py
src/lab04/: task1.py  task2.py
src/lab05/: csv_xlsx.py  json_csv.py  test.py
src/lab06/: cli_convert.py  cli_text.py
src/lab06/data/samples/: samples_text.txt
src/lab08/: models.py  serialize.py
src/lab09/: group.py
src/tests/: test_json_csv.py  test_text.py
tests/: test_json_csv.py  test_text.py
